# noskGPT

./: .gitignore  LICENSE  README.md  noskgpt.py  pyproject.toml  requirements.txt  training.py
noskgpt/: model.py  tokeniser.py  training.py
