[tool.poetry]
name = "noskgpt"
version = "0.1.0"
description = "Simple Shakespearian language model from scratch."
authors = ["oskarfernlund <oskar.fernlund@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
jupyter = "1.0.0"
jupytext = "^1.16.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
